# modbus_rust

./: .gitignore  Cargo.toml  README.md
examples/: rtu_master.rs  rtu_slave.rs  tcp_client.rs  tcp_server.rs
src/: config.rs  config.toml  lib.rs  main.rs
src/modbus/: client.rs  common.rs  master_client.rs  mod.rs  rtu.rs  server.rs  slave_server.rs  tcp.rs
